# ClimEval

./: .dockerignore  Dockerfile  README.md  app.py  backend.py  compare_data.py  compare_data_gpu.py  compare_data_with_graph.py  eval.ipynb  final.py  final_with_vis.py  multiple_metrics.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_backend.py
climeval/: __init__.py  cli.py  core.py
examples/: run_example.py
tests/: test_dask_pipeline.py  test_script.py
