[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climeval"
version = "0.1.0"
authors = [
    { name="Shiv Shankar Singh", email="shivshankarsingh.py@gmail.com" },
]
description = "Climate Model vs. Observation Comparison Tool"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "xarray",
    "dask",
    "scipy",
    "matplotlib",
    "cartopy",
    "pytest"
]
keywords = ["climate", "verification", "model", "evaluation", "dask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
climeval = "climeval.cli:main"  # Enables CLI support

[project.urls]
"Homepage" = "https://github.com/shiv3679/ClimEval"
"Bug Tracker" = "https://github.com/shiv3679/ClimEval/issues"
