[metadata]
name = climeval
version = 0.1.1
author = Shiv Shankar Singh
author_email = shivshankarsingh.py@gmail.com
description = Climate Model vs. Observation Verification Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shiv3679/ClimEval
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    xarray
    dask
    scipy
    matplotlib
    cartopy
    pytest

[options.packages.find]
include = climeval*

[options.entry_points]
console_scripts =
    climeval = climeval.cli:main

